add starting ThemeData

--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -1,3 +1,7 @@
 {
-    "@@locale": "en"
+    "@@locale": "en",
+    "appTitle": "BrainBench",
+    "@appTitle": {
+        "description": "The title of the application"
+    }
 }
