--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -1,3 +1,7 @@
 {
-    "@@locale": "de"
+    "@@locale": "de",
+    "appTitle": "BrainBench",
+    "@appTitle": {
+        "description": "The title of the application"
+    }
 }
