feat: add base named routes, TabsPage and placeholder pages

--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -15,5 +15,17 @@
     "bottomNavigationResults": "Ergebnisse",
     "@bottomNavigationResults": {
         "description": "The title of the results page in the bottom navigation bar"
+    },
+    "appBarTitleHome": "BrainBench",
+    "@appBarTitleHome": {
+        "description": "The title of the home page in the app bar"
+    },
+    "appBarTitleCategories": "Kategorien",
+    "@appBarTitleCategories": {
+        "description": "The title of the categories page in the app bar"
+    },
+    "appBarTitleQuizResult": "Ergebnisse",
+    "@appBarTitleQuizResult": {
+        "description": "The title of the quiz result page in the app bar"
     }
 }
