--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -64,15 +64,15 @@
     "@feedBackBottomSheetTitle": {
         "description": "The title of the bottom sheet that displays the quiz results"
     },
-    "feedbackBSheetCorrectAnswers": "✅ korrekte Antworten:",
+    "feedbackBSheetCorrectAnswers": "Korrekte Antworten:",
     "@feedbackBSheetCorrectAnswers": {
         "description": "The label for the correct answers in the quiz results bottom sheet"
     },
-    "feedbackBSheetWrongAnswers": "❌ falsche Antworten:",
+    "feedbackBSheetWrongAnswers": "Falsche Antworten:",
     "@feedbackBSheetWrongAnswers": {
         "description": "The label for the incorrect answers in the quiz results bottom sheet"
     },
-    "feedbackBSheetMissedCorrectAnswers": "⚠️ verpasste korrekte Antworten:",
+    "feedbackBSheetMissedCorrectAnswers": "Verpasste korrekte Antworten:",
     "@feedbackBSheetMissedCorrectAnswers": {
         "description": "The label for the missed correct answers in the quiz results bottom sheet"
     },
@@ -83,5 +83,17 @@
     "quizResultsNotSaved": "Keine Quiz Ergebnisse gespeichert",
     "@quizResultsNotSaved": {
         "description": "The message displayed when the quiz results are not saved"
+    },
+    "answerExpandableQuestionHeader": "Frage:",
+    "@answerExpandableQuestionHeader": {
+        "description": "The header of the expandable question in the answer page"
+    },
+    "answerExpandableExplanationHeader": "Erklärung:",
+    "@answerExpandableExplanationHeader": {
+        "description": "The header of the expandable explanation in the answer page"
+    },
+    "answerExpandableNoExplanation": "Keine Erklärung verfügbar",
+    "@answerExpandableNoExplanation": {
+        "description": "The message displayed when there is no explanation available"
     }
 }
