--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -103,5 +103,17 @@
     "quizResultBtnLbl": "Zurück zu Themenauswahl",
     "@quizResultBtnLbl": {
         "description": "The label of the button to go back to the quiz"
+    },
+    "quizResultPassed": "Bestanden",
+    "@quizResultPassed": {
+        "description": "The label for the passed quiz result"
+    },
+    "quizResultFailed": "Nicht bestanden",
+    "@quizResultFailed": {
+        "description": "The label for the failed quiz result"
+    },
+    "quizResultScore": "Punktzahl",
+    "@quizResultScore": {
+        "description": "The label for the quiz result score"
     }
 }
