--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -115,5 +115,13 @@
     "quizResultScore": "Score",
     "@quizResultScore": {
         "description": "The label for the quiz result score"
+    },
+    "topicsDone": "Done",
+    "@topicsDone": {
+        "description": "The label for the done topics"
+    },
+    "topicsTitle": "Topics",
+    "@topicsTitle": {
+        "description": "The title of the topics page"
     }
 }
