--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -123,5 +123,61 @@
     "topicsTitle": "Topics",
     "@topicsTitle": {
         "description": "The title of the topics page"
+    },
+    "authEmail": "E-Mail",
+    "@authEmail": {
+        "description": "The label for the email input field"
+    },
+    "authPassword": "Passwort",
+    "@authPassword": {
+        "description": "The label for the password input field"
+    },
+    "authLoginTitle": "Login",
+    "@authLoginTitle": {
+        "description": "The title of the login page"
+    },
+    "authRegisterTitle": "Registrieren",
+    "@authRegisterTitle": {
+        "description": "The title of the register page"
+    },
+    "authLoginBtnLbl": "Login",
+    "@authLoginBtnLbl": {
+        "description": "The label of the login button"
+    },
+    "authRegisterBtnLbl": "Registrieren",
+    "@authRegisterBtnLbl": {
+        "description": "The label of the register button"
+    },
+    "authSignUpTextBtnLbl": "Hier registrieren",
+    "@authSignUpTextBtnLbl": {
+        "description": "The label of the sign up text button"
+    },
+    "authSignUpText": "Noch kein Account? ",
+    "@authSignUpText": {
+        "description": "The text of the sign up text"
+    },
+    "authLoginTextBtnLbl": "Login",
+    "@authLoginTextBtnLbl": {
+        "description": "The label of the login text button"
+    },
+    "authLoginText": "Du hast schon einen Account? ",
+    "@authLoginText": {
+        "description": "The text of the login text"
+    },
+    "authPwdForgottenText": "Passwort vergessen? ",
+    "@authPwdForgottenText": {
+        "description": "The text of the password forgotten text"
+    },
+    "authPwdForgottenBtnLbl": "Hier zurücksetzen",
+    "@authPwdForgottenBtnLbl": {
+        "description": "The label of the password forgotten button"
+    },
+    "authDividerLoginText": "Oder anmelden mit",
+    "@authDividerLoginText": {
+        "description": "The text of the divider"
+    },
+    "authDividerRegisterText": "Oder registrieren mit",
+    "@authDividerRegisterText": {
+        "description": "The text of the divider"
     }
 }
