--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -303,5 +303,13 @@
     "profileEditTooltip": "Profil bearbeiten",
     "@profileEditTooltip": {
         "description": "Tooltip for the edit button on the profile page AppBar"
+    },
+    "settingsThemeToggleLabel": "Theme",
+    "@settingsThemeToggleLabel": {
+        "description": "Label for the theme (dark/light mode) toggle switch"
+    },
+    "settingsLanguageLabel": "Sprache",
+    "@settingsLanguageLabel": {
+        "description": "Label for the language selection setting"
     }
 }
