--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -323,5 +323,13 @@
     "pickerDoneButton": "Fertig",
     "@pickerDoneButton": {
         "description": "Label for the 'Done' button in pickers"
+    },
+    "settingsThemeRefreshed": "Themen neu geladen",
+    "@settingsThemeRefreshed": {
+        "description": "Message displayed when the theme is refreshed"
+    },
+    "settingsRefreshButtonLabel": "Aktualisieren",
+    "@settingsRefreshButtonLabel": {
+        "description": "Label for the refresh button"
     }
 }
