--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -323,5 +323,13 @@
     "pickerDoneButton": "Done",
     "@pickerDoneButton": {
         "description": "Label for the 'Done' button in pickers"
+    },
+    "settingsThemeRefreshed": "Theme refreshed",
+    "@settingsThemeRefreshed": {
+        "description": "Message displayed when the theme is refreshed"
+    },
+    "settingsRefreshButtonLabel": "Refresh",
+    "@settingsRefreshButtonLabel": {
+        "description": "Label for the refresh button"
     }
 }
