refactor: refactor locale provider, settings page and add unit tests for locale

--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -331,5 +331,9 @@
     "settingsRefreshButtonLabel": "Aktualisieren",
     "@settingsRefreshButtonLabel": {
         "description": "Label for the refresh button"
+    },
+    "settingsLocaleRefreshed": "Sprachen neu geladen",
+    "@settingsLocaleRefreshed": {
+        "description": "Message displayed when the locale is refreshed"
     }
 }
