--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -331,5 +331,9 @@
     "settingsRefreshButtonLabel": "Refresh",
     "@settingsRefreshButtonLabel": {
         "description": "Label for the refresh button"
+    },
+    "settingsLocaleRefreshed": "Locale refreshed",
+    "@settingsLocaleRefreshed": {
+        "description": "Message displayed when the locale is refreshed"
     }
 }
