--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -347,5 +347,9 @@
     "errorGeneric": "Ein Fehler ist aufgetreten",
     "@errorGeneric": {
         "description": "Generische Fehlermeldungs-Präfix, die vor den spezifischen Fehlerdetails angezeigt wird"
+    },
+    "authPasswordResetEmailPrompt": "Bitte gib zuerst deine E-Mail-Adresse ein.",
+    "@authPasswordResetEmailPrompt": {
+        "description": "Meldung, die angezeigt wird, wenn versucht wird, das Passwort zurückzusetzen, ohne eine E-Mail-Adresse einzugeben."
     }
 }
